--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Monica Scroggs</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Monica Scroggs</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
