updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a recent graduate from Rhodes College in Memphis, TN.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Memphis, TN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, Listening to NPR, Salsa Dancing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Attorney</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Miami, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I feel that learning how to program is a useful asset in any field of study or work, and I wanted to understand how this techonology functions.</p>
     </section>
 
     <footer id="footer">
